# shadercrab

./: Cargo.toml  LICENCE-APACHE  README.md
src/: buffer.rs  channel.rs  copy_to_screen.wgsl  drawer.rs  fragment.frag  full_screen_triangle.wgsl  graphics.rs  main.rs  parse.rs  parser.rs  program.rs  renderer.rs  renderer_config.rs  shader.rs  template.glsl  uniforms.rs  vertex.vert
