[package]
name = "shadercrab"
version = "0.1.1"
license = "MIT OR Apache-2.0"
description = "A simple single buffer shadertoy emulator"
repository = "https://github.com/Dimev/shadercrab"
keywords = ["shader", "shadertoy", "opengl", "glsl", "glium"]
categories = ["command-line-utilities", "graphics", "rendering"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.31.0"