[package]
name = "shadercrab"
version = "0.1.2"
license = "MIT OR Apache-2.0"
description = "A simple single buffer shadertoy emulator"
repository = "https://github.com/Dimev/shadercrab"
keywords = ["shader", "shadertoy", "opengl", "glsl", "glium"]
categories = ["command-line-utilities", "graphics", "rendering"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
winit = "0.26.1"
image = "0.24.2"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.12", features = ["derive"] }
